2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/debug/simple-event.h: simplify the SimpleEvent API more

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/debug/simple-event.h: make Debug::SimpleEvent more convenient

	* src/debug/event.h, src/debug/logger.cpp: add FINALIZERS category

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/debug/logger.cpp:
	
	finish interrupted refactoring of log filter configuration

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/doc/Makefile.am, src/doc/refcounting.txt:
	
	  some developer documentation about refcounting

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/ui/view/view.cpp:

	  Wait a minute -- UI::View::View and SPDocument are both managed
	  by the collector -- the view doesn't need to ref the document!

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/ui/view/view.cpp: add missing unref

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/gc-anchored.cpp, src/gc-anchored.h:

	  added refcount logging to GC::Anchored

	* src/util/Makefile_insert, src/util/format.h:

	  shared string printf

2006-04-28  MenTaLguY  <mental@rydia.net>

    * src/sp-object.cpp: make refcount logging a little more useful
	  by including the relevent class name

2006-04-28  Jon A. Cruz  <jon@joncruz.org>

	* src/Makefile_insert, src/Makefile.am, src/dir-util-test.h,
	  src/dir-util-test.cpp, src/extract-uri-test.h,
	  src/extract-uri-test.cpp:
	  Replaced two tests with CxxTest versions.

2006-04-28  Jon A. Cruz  <jon@joncruz.org>

	* src/Makefile_insert, src/MultiPrinter.h, src/verbs.h,
	  src/verbs-test.h:
	  Adding unit test for verbs.

2006-04-27  verbalshadow <verbalshadow@gmail.com>
	
	* src/io/resource.h, src/io/resource.cpp, 
	  src/dialogs/swatches.cpp, src/helper/stock-items.cpp:
	  Added CREATE v0.1 support for gradients/swatches/patterns
	  Support for Linux & Win32. Mac support waiting final support
	  Directory info.

2006-04-26  Jon A. Cruz  <jon@joncruz.org>

	* src/Makefile.am, src/MultiPrinter.h, src/PylogFormatter.h,